--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,6 +12,8 @@ services:
       - CinaGloriaDB:/var/lib/postgresql/${DB_VERSION}/docker
     ports:
       - "${DB_PORT}:5432"
+    networks:
+      - db
   app:
     build: ./server
     depends_on:
@@ -26,7 +28,11 @@ services:
       then npm run start; 
       else npm run start:dev; 
       fi"
+    networks:
+      - db
 
 volumes:
   CinaGloriaDB:
   CinaGloriaDeps:
+networks:
+  db:
