--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,8 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "migration:generate": "typeorm-ts-node-commonjs migration:generate -d ./src/configs/migrations-local.config.ts ./src/db/migrations/auto",
+    "migration:run": "typeorm-ts-node-commonjs migration:run -d ./src/configs/migrations-local.config.ts",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
