feat: Add GitHub OAuth provider and configuration

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,7 @@ AVATAR_LIST=
 # google OAuth configuration
 GOOGLE_CLIENT_ID=
 GOOGLE_SECRET=
+
+# github OAuth configuration
+GITHUB_CLIENT_ID=
+GITHUB_SECRET=
